[package]
name = "rs-wasm-gassim"
version = "0.1.0"
authors = ["F. E. C. Ruijter <flo.ruijt@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.12", features = ["js"] }
nalgebra = {version = "0.32.3" , features = ["rand"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
